# compliant-parser

./: .dockerignore  .env.example  .gitignore  Dockerfile  PROJECT_SUMMARY.md  README.md  ai_workflows.py  api_v1.py  app.py  audit.py  auth.py  cases.py  cctns.py  complaint_parsing.py  database.py  document_generator.py  external_interfaces.py  governance.py  hrms.py  index.html  kis_client.py  kis_indexing_status.py  kis_policy_sync.py  manifest.json  migrations.py  models.py  ocr_enhancements.py  petition_assistance.py  privacy.py  quality_engine.py  requirements.txt  senior_dashboard.py  sw.js  ta_doc_parsing.py
services/knowledge-intelligence-service/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml
services/knowledge-intelligence-service/src/: __init__.py  config.py  main.py  state.py
services/knowledge-intelligence-service/src/api/: __init__.py  audit.py  domains.py  evaluations.py  facts.py  (+15 more)
services/knowledge-intelligence-service/tests/: conftest.py  test_auth_middleware.py  test_bns_mapping.py  test_control_plane.py  test_db_persistence.py  test_domain_isolation.py  test_e2e_mvp.py  test_embeddings_privacy.py  test_evaluation.py  test_fact_extraction.py  test_feedback.py  test_graph.py  test_health.py  test_hybrid_retrieval.py  test_idempotency.py  test_ingestion.py  test_llm_api_integration.py  test_maintenance.py  test_ontology.py  test_prompt_registry.py  test_provider_governance.py  test_quality_gates.py  test_reasoning.py  test_retention.py  test_security_release_gates.py  test_snapshots.py  test_vector_search.py  test_wiki.py
(+161 files in other folders)
